tests/lean/283.lean.expected.out
283.lean:1:22-1:25: error: application type mismatch
  f (f (t := ?m) ?m : ?m)
argument
  f (t := ?m) ?m
has type
  ?m : Sort ?u
but is expected to have type
  optParam _ t : Type ?u
